maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: not found: value random3
      random3() match{
      ^JediEscaper:67: error: not found: value mini
  ecritMessage(mini);
               ^